--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   animated_bottom_navigation_bar: ^1.3.3
   get: ^4.6.6
+  get_storage: ^2.1.1
 
 
 dev_dependencies:
