--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   get: ^4.6.6
   get_storage: ^2.1.1
+  google_fonts: ^6.2.1
 
 
 dev_dependencies:
