--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   get_storage: ^2.1.1
   google_fonts: ^6.2.1
   carousel_slider: ^5.0.0
+  dio: ^5.7.0
+  flutter_bloc: ^8.1.6
 
 
 dev_dependencies:
